tests/__snapshots__/validation-failFast-wrong-option-value-type-stderr.snap.txt
Error: Option 'failFast' requires a value of type boolean.

  1 | {
> 2 |   "failFast": "never"
    |               ^
  3 | }

      at ./tstyche.config.json:2:15

